feat: merge series
